--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DEBUG=0
-SECRET_KEY="jh9@9fbd4p-7f9=1mkp&x-rpbfue%pxt=bkqkdbp1_0tp)4x=c"
+SECRET_KEY=jh9@9fbd4p-7f9=1mkp&x-rpbfue%pxt=bkqkdbp1_0tp)4x=c
 DJANGO_ALLOWED_HOSTS=*
 SQL_ENGINE=django.db.backends.postgresql
 SQL_DATABASE=django_app
